force-app/main/default/objects/Health_Medical_Records__c/Health_Medical_Records__c.object-meta.xml
<CustomObject>
    <label>Health &amp; Medical Records</label>
    <nameField>
        <displayFormat>Rec-{00000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health &amp; Medical Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>