force-app/main/default/objects/Health_Medical_Records__c/fields/Date_1st_vaccine__c.field-meta.xml
<CustomField>
    <fullName>Date_1st_vaccine__c</fullName>
    <label>Date (1st vaccine)</label>
    <type>Date</type>
</CustomField>