force-app/main/default/objects/Health_Medical_Records__c/fields/Date_2nd_Vaccine__c.field-meta.xml
<CustomField>
    <fullName>Date_2nd_Vaccine__c</fullName>
    <label>Date (2nd Vaccine)</label>
    <type>Date</type>
</CustomField>