force-app/main/default/objects/Health_Medical_Records__c/fields/Date_conducted__c.field-meta.xml
<CustomField>
    <fullName>Date_conducted__c</fullName>
    <label>Date Conducted</label>
    <type>Date</type>
</CustomField>