force-app/main/default/objects/Health_Medical_Records__c/fields/Dev__c.field-meta.xml
<CustomField>
    <fullName>Dev__c</fullName>
    <label>Dev</label>
    <length>10</length>
    <type>Text</type>
</CustomField>