force-app/main/default/objects/Health_Medical_Records__c/fields/Employee_Status__c.field-meta.xml
<CustomField>
    <fullName>Employee_Status__c</fullName>
    <formula>TEXT(Name__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Status</label>
    <type>Text</type>
</CustomField>