force-app/main/default/objects/Health_Medical_Records__c/fields/Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Type__c</fullName>
    <formula>Name__r.Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Type</label>
    <type>Text</type>
</CustomField>