force-app/main/default/objects/Health_Medical_Records__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <label>Expiry Date (if required)</label>
    <type>Date</type>
</CustomField>