force-app/main/default/objects/Health_Medical_Records__c/fields/Medical_Centre__c.field-meta.xml
<CustomField>
    <fullName>Medical_Centre__c</fullName>
    <label>Conducted by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medical Practitioner</fullName>
                <default>true</default>
                <label>Medical Practitioner</label>
            </value>
            <value>
                <fullName>Wild Desert Safety Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>