force-app/main/default/objects/Health_Medical_Records__c/fields/Medical_Centre_Name__c.field-meta.xml
<CustomField>
    <fullName>Medical_Centre_Name__c</fullName>
    <label>Medical Centre Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>