force-app/main/default/objects/Health_Medical_Records__c/fields/Medical_Expiry_3yrs__c.field-meta.xml
<CustomField>
    <fullName>Medical_Expiry_3yrs__c</fullName>
    <formula>DATE(
   YEAR(Date_conducted__c) + 3,
   MONTH(Date_conducted__c),
   DAY(Date_conducted__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>3 Yrs from Date Conducted</inlineHelpText>
    <label>Medical Expiry (3yrs)</label>
    <type>Date</type>
</CustomField>