force-app/main/default/objects/Health_Medical_Records__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Medicals</relationshipName>
    <type>Lookup</type>
</CustomField>