force-app/main/default/objects/Health_Medical_Records__c/fields/Resend_Medical_Record_Expiry_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Resend_Medical_Record_Expiry_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Value will be set to true if it failed to send a reminder to the team. 
Automation that is populating this field: Medical Record Expiry - Scheduled - Flow</description>
    <label>Resend Medical Record Expiry Reminder</label>
    <type>Checkbox</type>
</CustomField>