force-app/main/default/objects/Health_Medical_Records__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding Medical</fullName>
            </value>
            <value>
                <fullName>Austroads Medical -49</fullName>
            </value>
            <value>
                <fullName>Austroads Medical +50</fullName>
            </value>
            <value>
                <fullName>Covid Vaccination</fullName>
            </value>
            <value>
                <fullName>Covid Vaccination (2nd)</fullName>
            </value>
            <value>
                <fullName>Eye Test</fullName>
            </value>
            <value>
                <fullName>Hearing Test</fullName>
            </value>
            <value>
                <fullName>Drug &amp; Alcohol Test</fullName>
            </value>
            <value>
                <fullName>Medical_3_Yearly_Review</fullName>
                <label>Medical - 3 Yearly Review</label>
            </value>
            <value>
                <fullName>Austroads Medical +50 Review</fullName>
            </value>
            <value>
                <fullName>Austroads Medical -49 Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>