force-app/main/default/objects/Health_Medical_Records__c/fields/Vaccine_Status__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Status__c</fullName>
    <label>Vaccine Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Vax</fullName>
                <default>true</default>
                <label>1st Vax</label>
            </value>
            <value>
                <fullName>1st Vax + Cert</fullName>
            </value>
            <value>
                <fullName>2nd Vax</fullName>
            </value>
            <value>
                <fullName>2nd Vax + Cert</fullName>
            </value>
            <value>
                <fullName>Booster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>