force-app/main/default/objects/Health_Medical_Records__c/fields/Vaccine_Type__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Type__c</fullName>
    <label>Vaccine Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Astra Zeneca</fullName>
            </value>
            <value>
                <fullName>Pfizer</fullName>
            </value>
            <value>
                <fullName>Moderna</fullName>
            </value>
            <value>
                <fullName>Novavax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>