force-app/main/default/objects/Health_Medical_Records__c/recordTypes/Covid_Vax.recordType-meta.xml
<RecordType>
    <fullName>Covid_Vax</fullName>
    <active>true</active>
    <label>Covid Vax</label>
</RecordType>