force-app/main/default/objects/Health_Medical_Records__c/recordTypes/Medical.recordType-meta.xml
<RecordType>
    <fullName>Medical</fullName>
    <active>true</active>
    <label>Medical</label>
</RecordType>