force-app/main/default/objects/Health_Medical_Records__c/validationRules/CovidVax_EmployeeNoSite.validationRule-meta.xml
<ValidationRule>
    <fullName>CovidVax_EmployeeNoSite</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   RecordTypeId = &apos;0120o0000017hXPAAY&apos;,
   ISBLANK(Name__r.Assigned_to_Unit__r.Site__c)  
)</errorConditionFormula>
    <errorMessage>We can not update the Employee&apos;s vaccine status because Site of Assigned to Unit is blank. Please check the Site in the Assigned to Unit Details below and make sure the Site is populated.</errorMessage>
</ValidationRule>