force-app/main/default/objects/Health_Medical_Records__c/listViews/All_Updated.listView-meta.xml
<ListView>
    <fullName>All_Updated</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Name__c</columns>
    <columns>Assigned_To_Unit__c</columns>
    <columns>Date_conducted__c</columns>
    <columns>Status__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Notes_Comments__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2025 12:00 AM</value>
    </filters>
    <label>All - Updated</label>
    <sharedTo>
        <group>HR</group>
    </sharedTo>
</ListView>