force-app/main/default/objects/Health_Medical_Records__c/listViews/Allm.listView-meta.xml
<ListView>
    <fullName>Allm</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Name__c</columns>
    <columns>Date_conducted__c</columns>
    <columns>Status__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Notes_Comments__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>all</label>
    <sharedTo>
        <group>HR</group>
        <group>Safety</group>
    </sharedTo>
</ListView>