force-app/main/default/objects/Health_Medical_Records__c/listViews/C19_Vax_Camp_08.listView-meta.xml
<ListView>
    <fullName>C19_Vax_Camp_08</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Date_1st_vaccine__c</columns>
    <columns>Date_2nd_Vaccine__c</columns>
    <columns>Vaccine_Type__c</columns>
    <columns>Vaccine_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Health_Medical_Records__c.Covid_Vax</value>
    </filters>
    <filters>
        <field>Employee_Status__c</field>
        <operation>equals</operation>
        <value>active</value>
    </filters>
    <filters>
        <field>Assigned_To_Unit__c</field>
        <operation>equals</operation>
        <value>camp 8</value>
    </filters>
    <label>C19 Vax|Camp #08</label>
</ListView>