force-app/main/default/objects/Health_Medical_Records__c/listViews/Mba_TPT_Medicals.listView-meta.xml
<ListView>
    <fullName>Mba_TPT_Medicals</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Date_conducted__c</columns>
    <columns>Medical_Expiry_3yrs__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Position__c</columns>
    <columns>Assigned_To_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_To_Unit__c</field>
        <operation>contains</operation>
        <value>transport - moomba</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Health_Medical_Records__c.Medical</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notContain</operation>
        <value>Expired</value>
    </filters>
    <filters>
        <field>Employee_Status__c</field>
        <operation>notEqual</operation>
        <value>inactive</value>
    </filters>
    <label>Mba-TPT / Medicals</label>
    <sharedTo>
        <group>HR</group>
        <group>Transport</group>
    </sharedTo>
</ListView>