force-app/main/default/objects/Health_Medical_Records__c/listViews/Medicals_Aus_Roads.listView-meta.xml
<ListView>
    <fullName>Medicals_Aus_Roads</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Name__c</columns>
    <columns>Position__c</columns>
    <columns>Assigned_To_Unit__c</columns>
    <columns>Status__c</columns>
    <columns>Date_conducted__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Medical_Expiry_3yrs__c</columns>
    <columns>Notes_Comments__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Health_Medical_Records__c.Medical</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Austroads Medical -49,Austroads Medical +50,Austroads Medical +50 Review,Austroads Medical -49 Review</value>
    </filters>
    <label>Medicals - Aus Roads</label>
    <sharedTo>
        <group>HR</group>
        <group>Managing_Director</group>
    </sharedTo>
</ListView>